...
    <string name="addItemHint">Enter product name</string>
    <string name="cross">Cross</string>
    <string name="product_name_hint">Enter a product name</string>
    <string name="product_picture">Product picture</string>
    <string name="save">Save</string>
    <string name="input_shopping_list_name">Input shopping list name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="new_product">New product</string>
    <string name="product_title">Product</string>
    <string name="edit">Edit</string>
    <string name="in_shop">In shop</string>
    <string name="delete_shopping_list_question">Delete shopping list?</string>
    <string name="in_shop_ending_work_message">Done</string>
    <string name="change_list_name">Rename</string>
    <string name="product_image">Product image</string>
    <string name="view_holder" translatable="false">view_holder</string>
    <string name="pref_title">Settings</string>
    <string name="pref_cross_out_action">Cross out product</string>
    <string name="pref_key_cross_out_action" translatable="false">pref_key_cross_out_action</string>
    <string name="pref_cross_out_action_summary">Check a product by crossing out or just clicking</string>
    <string name="item_image">Product image</string>
    <string name="share">Share</string>
    <string name="delete">Remove</string>
    <string name="pref_key_show_images" translatable="false">Show images</string>
    <string name="pref_show_images">Show images</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="pref_key_email_host" translatable="false">pref_key_email_host</string>
    <string name="pref_key_email_port" translatable="false">pref_key_email_port</string>
    <string name="pref_key_email_login" translatable="false">pref_key_email_login</string>
    <string name="pref_key_email_password" translatable="false">pref_key_email_password</string>
    <string name="json_file_identifier" translatable="false">ShoppingList</string>
    <string name="wrong_email_protocol_exception_message">Supports only IMAP protocol</string>
    <string name="not_assigned">Not assigned</string>
    <string name="password_mask" translatable="false">******</string>
    <string name="action_receive_shopping_list_by_email">Receive shopping list by email</string>
    <string name="send">Send</string>
    <string name="loaded">loaded</string>
    <string name="action_save_list">Save list</string>
    <string name="action_remove_all_items">Remove all items</string>
    <string name="action_go_to_in_shop_activity">Go to in shop activity</string>
    <string name="action_filter">Filter</string>
    <string name="action_edit_shopping_list">Edit</string>
    <string name="loading">Loading…</string>
    <string name="no_emails_for_loading">There are not any emails for loading</string>
    <string name="new_list">New list</string>
    <string name="HelpInShop1">Swipe to cross out items. To undo crossing out, swipe again.\n\nYou can change the way of crossing out (by click) in the settings.\n</string>
    <string name="pref_key_show_help_screens">Show help</string>
    <string name="got_it">Got it</string>
...
    <string name="category_not_assigned">Category was not assigned</string>
    <string name="order">Order</string>
    <string name="no_name">No name</string>
    <string name="product_is_exist">Product with the same name is already exist.</string>
    <string name="divider" translatable="false">,</string>
    <string name="product_divider" translatable="false">;</string>
    <string name="load">Load</string>
    <string name="text_for_loading">Type or paste text in this format:\nMilk, 2;  Bread, 1; Wine, 3</string>
    <string name="menu_button_identifier">More options</string>
    <string name="without_category">Without category</string>
    <string name="pref_key_show_categories" translatable="false">pref_key_show_categories</string>
    <string name="pref_show_categories">Show categories</string>
    <string name="default_order" translatable="false">100</string>
...
    <string name="product_image_activity_title">Image of %1$s</string>
    <string name="pref_key_show_prices" translatable="false">pref_key_show_prices</string>
    <string name="pref_show_prices">Show prices</string>
    <string name="shopping_list_info">Total sum: %1$s. Left to by on: %2$s</string>
    <string name="count">Qty:</string>
    <string name="price">Price:</string>
    <string name="default_unit">pc.</string>
    <string name="enter_price">Enter price</string>
    <string name="unit">Unit:</string>
    <string name="pref_key_show_units" translatable="false">pref_key+show_units</string>
    <string name="pref_show_units">Show units</string>
    <string name="unit_not_named">Unit was not named</string>
    <string name="units_list_activity_no_data_text">Add new unit</string>
...
