<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.InputProductNameFragment">

    <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/medium_size"
        android:id="@+id/newItemEditText"
        android:layout_alignParentTop="true"
        android:hint="@string/addItemHint"
        android:inputType="textCapSentences"
        android:imeOptions="flagNoExtractUi|actionDone"
        android:textColor="@android:color/black"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/btnAddProductToShoppingList"
        android:layout_toLeftOf="@+id/btnAddProductToShoppingList"
        android:layout_alignParentLeft="true" />

    <ImageView
        android:id="@+id/btnAddProductToShoppingList"
        android:layout_width="@dimen/medium_size"
        android:layout_height="@dimen/medium_size"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/ic_add_product"
        android:contentDescription="@string/addItemHint" />

</RelativeLayout>