...

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/input_shopping_list_name"
        android:id="@+id/inputNewListName"
        android:inputType="textCapSentences"
        android:imeOptions="flagNoExtractUi" />

</LinearLayout>
