package com.RightDirection.ShoppingList.activities;

import android.content.ContentResolver;
import android.database.Cursor;
import androidx.test.espresso.ViewInteraction;
import androidx.test.espresso.contrib.RecyclerViewActions;
import androidx.test.filters.LargeTest;
import androidx.test.filters.MediumTest;
import androidx.test.uiautomator.UiObjectNotFoundException;

import com.RightDirection.ShoppingList.R;
import com.RightDirection.ShoppingList.utils.SL_ContentProvider;
import com.RightDirection.ShoppingList.utils.Utils;

import org.junit.Test;

import static androidx.test.platform.app.InstrumentationRegistry.getInstrumentation;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.Espresso.openActionBarOverflowOrOptionsMenu;
import static androidx.test.espresso.Espresso.pressBack;
import static androidx.test.espresso.action.ViewActions.clearText;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.longClick;
import static androidx.test.espresso.action.ViewActions.pressImeActionButton;
import static androidx.test.espresso.action.ViewActions.swipeLeft;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.assertion.ViewAssertions.doesNotExist;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.hasDescendant;
import static androidx.test.espresso.matcher.ViewMatchers.hasSibling;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withHint;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withParent;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static com.RightDirection.ShoppingList.activities.CustomMatchers.*;
import static junit.framework.Assert.assertEquals;
import static junit.framework.Assert.assertNotNull;
import static junit.framework.Assert.assertTrue;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.containsString;
import static org.hamcrest.Matchers.lessThan;

public class ShoppingListEditingActivityTest extends ActivitiesTest {

    private ViewInteraction getBtnIncreaseViewInteraction(String productName) {
        if (!Utils.showPrices(mActivity)) {
            return onView(allOf(withId(getImgIncreaseId()),
                    withParent(hasSibling(recyclerViewItemWithText(productName)))));
        }else{
            return onView(allOf(withId(getImgIncreaseId()),
                    withParent(withParent(hasSibling(recyclerViewItemWithText(productName))))));
        }
    }

    private ViewInteraction getBtnDecreaseViewInteraction(String productName) {
        if (!Utils.showPrices(mActivity)) {
            return onView(allOf(withId(getImgDecreaseId()),
                    withParent(hasSibling(recyclerViewItemWithText(productName)))));
        }else{
            return onView(allOf(withId(getImgDecreaseId()),
                    withParent(withParent(hasSibling(recyclerViewItemWithText(productName))))));
        }
    }

    private ViewInteraction getImgDeleteViewInteraction(String productName) {
        return onView(allOf(withId(R.id.imgDelete),
                    hasSibling(recyclerViewItemWithText(productName))));
    }

    private ViewInteraction getRecyclerViewItemTvSumInfoViewInteraction(String listName) {
        return onView(allOf(withId(R.id.tvSumInfo),
                withParent(hasSibling(recyclerViewItemWithText(listName)))));
    }

    @Test
    @LargeTest
    public void testShoppingListEditingActivity_ProductsCountEnter(){
        // Проводим тест для различных значений настроек
        setSettingsShowUnits(false);
        setSettingsShowPrices(false);
        productsCountEnter();
        removeShoppingList(mNewListName);
        setSettingsShowUnits(true);
        setSettingsShowPrices(true);
        productsCountEnter();
        removeShoppingList(mNewListName);
        setSettingsShowUnits(false);
        setSettingsShowPrices(true);
        productsCountEnter();
        removeShoppingList(mNewListName);
        setSettingsShowUnits(true);
        setSettingsShowPrices(false);
        productsCountEnter();
        removeShoppingList(mNewListName);
    }

    private void removeShoppingList(String listName){
        // Длинный клик на новом списке покупок
        onView(recyclerViewItemWithText(listName)).perform(longClick());
        // В меню действий нажимаем кнопку удаления списка
        onView(withId(R.id.imgDelete)).perform(click());
        // Проверяем, что открылось окно с вопросом об удалении списка
        onView(withText(mActivity.getString(R.string.delete_shopping_list_question))).check(matches(isDisplayed()));
        // Подтверждаем удаление
        onView(withText(mActivity.getString(R.string.ok))).perform(click());
    }
    
    private void productsCountEnter() {
        addNewShoppingList();

        // Длинный клик на новом списке покупок
        onView(recyclerViewItemWithText(mNewListName)).perform(longClick());

        // В меню действий нажимаем кнопку редактирования списка
        onView(withId(R.id.action_edit_shopping_list)).perform(click());

        // Проверяем, что открылась активность редактирования списка покупок
        onView(withId(R.id.action_save_list)).check(matches(isDisplayed()));

        // На одном из элементов проверяем, что количество = 1
        getEtCountViewInteraction(mNewProductNamePattern + "1")
                .check(matches(withText("1.0")));

        // Нажимаем два раза на кнопку "Increase"
        getBtnIncreaseViewInteraction(mNewProductNamePattern + "1")
                .perform(click())
                .perform(click());

        // Проверяем, что в текстовом поле отображается число 3
        getEtCountViewInteraction(mNewProductNamePattern + "1")
                .check(matches(withText("3.0")));

        // Нажимаем кнопку "Decrease"
        getBtnDecreaseViewInteraction(mNewProductNamePattern + "1").perform(click());

        // Проверяем, что в текстовом поле отображается число 2
        getEtCountViewInteraction(mNewProductNamePattern + "1")
                .check(matches(withText("2.0")));

        // Вводим в текстовое поле количество 5
        getEtCountViewInteraction(mNewProductNamePattern + "1")
                .perform(clearText())
                .perform(typeText("5.0"));

        // Попытаемся ввести не число
        getEtCountViewInteraction(mNewProductNamePattern + "1")
                .perform(typeText("Not number"))
                // Проверяем, что в окне снова отображается 5
                .check(matches(withText("5.0")));

        // Выбираем другой элемент списка. С помощью кнопки добавим количество до 11
        for (int i=0; i<10; i++) {
            getBtnIncreaseViewInteraction(mNewProductNamePattern + "2")
                    .perform(click());
        }

        // Проверяем, что у одного элемента списка указано количество 5, у другого - 11
        getEtCountViewInteraction(mNewProductNamePattern + "1")
                .check(matches(withText("5.0")));
        getEtCountViewInteraction(mNewProductNamePattern + "2")
                .check(matches(withText("11.0")));

        // Сохраняем список покупок
        onView(withId(R.id.action_save_list)).perform(click());

        // Проверяем, что снова открылась активность MainActivity
        onView(withId(R.id.fabAddNewShoppingList)).check(matches(isDisplayed()));

        // Проверяем, что в таблице содержимого списка покупок для редактированных элементов проставлено корректное количество
        ContentResolver contentResolver = mActivity.getContentResolver();
        Cursor cursor = contentResolver.query(SL_ContentProvider.SHOPPING_LIST_CONTENT_CONTENT_URI,
                null, SL_ContentProvider.KEY_NAME + " = ? OR " + SL_ContentProvider.KEY_NAME + " = ?",
                new String[]{mNewProductNamePattern + "1", mNewProductNamePattern + "2"}, null);
        assertNotNull(cursor);
        assertTrue(cursor.getCount() == 2);
        int keyCountIndex = cursor.getColumnIndexOrThrow(SL_ContentProvider.KEY_COUNT);
        int keyNameIndex = cursor.getColumnIndexOrThrow(SL_ContentProvider.KEY_NAME);
        while (cursor.moveToNext()) {
            if (cursor.getString(keyNameIndex).equals(mNewProductNamePattern + "1")) {
                assertEquals("5", cursor.getString(keyCountIndex));
            }
            else if (cursor.getString(keyNameIndex).equals(mNewProductNamePattern + "2")) {
                assertEquals("11", cursor.getString(keyCountIndex));
            }
        }
        cursor.close();

        testShoppingListInShopActivity_CountAppearing();

        timeout(1000);
        pressBack();
    }

    private void testShoppingListInShopActivity_CountAppearing() {
        // Клик на новом списке покупок
        onView(recyclerViewItemWithText(mNewListName)).perform(click());
        onView(withId(R.id.btnInShop)).perform(click());

        // Проверяем, что открылась активность "В магазине"
        onView(withId(R.id.action_filter)).check(matches(isDisplayed()));


        // Проверяем, что у одного элемента списка указано количество 5, у другого - 11
        onView(allOf(withId(R.id.txtCount),
                hasSibling(recyclerViewItemWithText(mNewProductNamePattern + "1"))))
                .check(matches(withText(containsString("5.0"))));
        onView(allOf(withId(R.id.txtCount),
                hasSibling(recyclerViewItemWithText(mNewProductNamePattern + "2"))))
                .check(matches(withText(containsString("11.0"))));
    }

    @Test
    @LargeTest
    public void testSwitchingBetweenInShopAndEditActivity() {
        // Проводим тест для различных значений настроек
        setSettingsShowUnits(false);
        setSettingsShowPrices(false);
        switchingBetweenInShopAndEditActivity();
        removeShoppingList(mNewListName);
        timeout(1000);
        removeShoppingList(mNewListName + "1");
        setSettingsShowUnits(true);
        setSettingsShowPrices(true);
        switchingBetweenInShopAndEditActivity();
        removeShoppingList(mNewListName);
        timeout(1000);
        removeShoppingList(mNewListName + "1");
        setSettingsShowUnits(false);
        setSettingsShowPrices(true);
        switchingBetweenInShopAndEditActivity();
        removeShoppingList(mNewListName);
        timeout(1000);
        removeShoppingList(mNewListName + "1");
        setSettingsShowUnits(true);
        setSettingsShowPrices(false);
        switchingBetweenInShopAndEditActivity();
        removeShoppingList(mNewListName);
        timeout(1000);
        removeShoppingList(mNewListName + "1");
    }

    private void switchingBetweenInShopAndEditActivity(){
        // Сначала проверим переключение в уже сохраненном списке
        addNewShoppingList();

        // Длинный клик на новом списке покупок
        onView(recyclerViewItemWithText(mNewListName)).perform(longClick());

        // В меню действий нажимаем кнопку редактирования списка
        onView(withId(R.id.action_edit_shopping_list)).perform(click());

        // Нажимаем два раза на кнопку "Increase"
        getBtnIncreaseViewInteraction(mNewProductNamePattern + "1")
                .perform(click())
                .perform(click());

        // Переключаемся на активность "В магазине"
        onView(withId(R.id.action_go_to_in_shop_activity)).perform(click());

        // Проверяем, что в текстовом поле отображается число 3
        getTvCountViewInteraction(mNewProductNamePattern + "1").check(matches(withText(containsString("3.0"))));

        // Переключаемся на активность "Редактирование списка"
        onView(withId(R.id.action_edit_shopping_list)).perform(click());

        // Проверяем, что открылась активность редактирования списка покупок
        onView(withId(R.id.action_save_list)).check(matches(isDisplayed()));

        pressBack();
        pressBack(); // вернулись к основной активности

        // Проверим работу переключения для несохраненного списка
        // Нажмем на кнопку добавления нового списка покупок
        onView(withId(R.id.fabAddNewShoppingList)).perform(click());

        // Добавим новый элемент в список товаров и базу данных нажатием на кнопку "Плюс"
        String textForTyping = mNewProductNamePattern + "1";
        onView(withId(R.id.newItemEditText)).perform(typeText(textForTyping));
        onView(withId(R.id.btnAddProductToShoppingList)).perform(click());

        // Добавим новый элемент в список товаров и базу данных нажатием на кнопку "Готово"
        textForTyping = mNewProductNamePattern + "2";
        onView(withId(R.id.newItemEditText)).perform(typeText(textForTyping), pressImeActionButton());

        // Нажимаем два раза на кнопку "Increase"
        getBtnIncreaseViewInteraction(mNewProductNamePattern + "1").perform(click());

        // "Глюк" Espresso - если не закрыть клавиатуру перед вызововм диалгового окна, то
        // Espresso в большинстве случаев не открывает клавиатуру при печати в текстовом поле
        // inputNewListName диалогового окна, однако пытается произвести действия с диалоговым
        // окном в том месте, как будто оно было смещено (видимо, действия производятся
        // по координатам экрана). Из-за этого вместо печати текста в поле диалогового окна,
        // например, может открыться Activity редактирования товара и текст начнет набираться
        // в текстовом поле этой Activity. Принудительное закрытие клавиатуры перед нажатием
        // кнопки сохранения списка решает эту проблему.
        onView(withId(R.id.newItemEditText)).perform(closeSoftKeyboard());

        // Переключаемся на активность "В магазине"
        onView(withId(R.id.action_go_to_in_shop_activity)).perform(click());

        // Введем имя нового списка
        onView(withId(R.id.inputNewListName)).perform(typeText(mNewListName + "1"));
        onView(withText(mActivity.getString(R.string.ok))).perform(click());

        // Проверяем, что в активности "В магазине" в текстовом поле отображается число 2
        getTvCountViewInteraction(mNewProductNamePattern + "1").check(matches(withText(containsString("2.0"))));

        // Переключаемся на активность "Редактирование списка"
        onView(withId(R.id.action_edit_shopping_list)).perform(click());

        // Проверяем, что открылась активность редактирования списка покупок
        onView(withId(R.id.action_save_list)).check(matches(isDisplayed()));

        pressBack();
        pressBack(); // вернулись к основной активности

        timeout(1000);
    }

    @Test
    @MediumTest
    public void shoppingListEditingActivity_SendEmail() throws UiObjectNotFoundException {
        addNewShoppingList();

        // Переходим в активность "Редактирование списка"
        onView(recyclerViewItemWithText(mNewListName)).perform(longClick());
        onView(withId(R.id.action_edit_shopping_list)).perform(click());

        // Нажимаем на кнопку вызова подменю
        openActionBarOverflowOrOptionsMenu(getInstrumentation().getTargetContext());

        // Нажимаем кнопку отправки списка покупок по почте
        onView(withText(mActivity.getString(R.string.share))).perform(click());

        checkEmailAppearing(
                mActivity.getString(R.string.json_file_identifier) + " '" + mNewListName + "'",
                "" + mNewProductNamePattern + "2, 1.0;\n" + mNewProductNamePattern + "1, 1.0;");
    }

    @Test
    @LargeTest
    public void shoppingListEditingActivity_LoadShoppingList(){
        // Проводим тест для различных значений настроек
        setSettingsShowUnits(true);
        setSettingsShowPrices(true);
        loadShoppingList();
        try {
            sendEmailWithUnitsAndPrices("test1, 5.0, test1., 50.0;\ntest2, 3.0, test2., 100.0;\ntest3, 1.0, " + mActivity.getString(R.string.default_unit) + ", 0.0;\ntest4, 1.0, " + mActivity.getString(R.string.default_unit) + ", 200.0;\ntest5 555, 2.3, test9., 650.0;");
        } catch (UiObjectNotFoundException e) {
            e.printStackTrace();
        }
        removeShoppingList(mNewListName);
        setSettingsShowUnits(false);
        setSettingsShowPrices(false);
        loadShoppingList();
        try {
            sendEmailWithUnitsAndPrices("test1, 5.0;\ntest2, 3.0;\ntest3, 1.0;\ntest4, 1.0;\ntest5 555, 2.3;");
        } catch (UiObjectNotFoundException e) {
            e.printStackTrace();
        }
        removeShoppingList(mNewListName);
        setSettingsShowUnits(false);
        setSettingsShowPrices(true);
        loadShoppingList();
        try {
            sendEmailWithUnitsAndPrices("test1, 5.0, test1., 50.0;\ntest2, 3.0, test2., 100.0;\ntest3, 1.0, " + mActivity.getString(R.string.default_unit) + ", 0.0;\ntest4, 1.0, " + mActivity.getString(R.string.default_unit) + ", 200.0;\ntest5 555, 2.3, test9., 650.0;");
        } catch (UiObjectNotFoundException e) {
            e.printStackTrace();
        }
        removeShoppingList(mNewListName);
        setSettingsShowUnits(true);
        setSettingsShowPrices(false);
        loadShoppingList();
        try {
            sendEmailWithUnitsAndPrices("test1, 5.0, test1.;\ntest2, 3.0, test2.;\ntest3, 1.0, " + mActivity.getString(R.string.default_unit) + ";\ntest4, 1.0, " + mActivity.getString(R.string.default_unit) + ";\ntest5 555, 2.3, test9.;");
        } catch (UiObjectNotFoundException e) {
            e.printStackTrace();
        }
        removeShoppingList(mNewListName);
    }

    private void sendEmailWithUnitsAndPrices(String emailBody) throws UiObjectNotFoundException {
        // Переходим в активность "Редактирование списка"
        onView(recyclerViewItemWithText(mNewListName)).perform(longClick());
        onView(withId(R.id.action_edit_shopping_list)).perform(click());

        // Нажимаем на кнопку вызова подменю
        openActionBarOverflowOrOptionsMenu(getInstrumentation().getTargetContext());

        // Нажимаем кнопку отправки списка покупок по почте
        onView(withText(mActivity.getString(R.string.share))).perform(click());

        checkEmailAppearing(
                mActivity.getString(R.string.json_file_identifier) + " '" + mNewListName + "'",
                emailBody);
    }

    private void loadShoppingList(){
        addNewShoppingList();

        // Клик на новом списке покупок
        onView(recyclerViewItemWithText(mNewListName)).perform(longClick());
        onView(withId(R.id.action_edit_shopping_list)).perform(click());

        // Нажимаем на кнопку вызова подменю
        openActionBarOverflowOrOptionsMenu(getInstrumentation().getTargetContext());

        // В меню нажимаем кнопку отправки списка по почте
        onView(withText(R.string.load)).perform(click());

        // Открылась форма загрузки
        loadAndCheckList();
    }

    @Test
    @MediumTest
    public void shoppingListEditingActivity_AddEmptyItem(){
        addNewShoppingList();

        // Открываем для редактирования
        onView(recyclerViewItemWithText(mNewListName)).perform(longClick());
        onView(withId(R.id.action_edit_shopping_list)).perform(click());

        onView(withId(R.id.btnAddProductToShoppingList)).perform(click());
        onView(withId(R.id.rvProducts)).check(new RecyclerViewItemCountAssertion(lessThan(3)));

        pressImeActionButton();
        onView(withId(R.id.rvProducts)).check(new RecyclerViewItemCountAssertion(lessThan(3)));

        pressBack();
        pressBack();
    }

    @Test
    @LargeTest
    public void shoppingListEditingActivity_UnitsTest_WithoutPrices(){
        // Проводим тест для различных значений настроек
        setSettingsShowUnits(true);
        setSettingsShowPrices(false);
        unitsTest();
    }

    @Test
    @LargeTest
    public void shoppingListEditingActivity_UnitsTest_WithPrices(){
        // Проводим тест для различных значений настроек
        setSettingsShowUnits(true);
        setSettingsShowPrices(true);
        unitsTest();
    }

    private void unitsTest(){
        // Создаем новый список покупок, добавляем в него три товара, и создаем несколько новых ед. измерения.
        addNewShoppingList();
        editNewShoppingList();
        addNewUnit(mNewUnitNamePattern + "1", mNewUnitShortNamePattern + "1");
        addNewUnit(mNewUnitNamePattern + "2", mNewUnitShortNamePattern + "2");
        addNewUnit(mNewUnitNamePattern + "3", mNewUnitShortNamePattern + "3");
        // Открываем его в активности редактирования.
        onView(recyclerViewItemWithText(mNewListName)).perform(longClick());
        onView(withId(R.id.action_edit_shopping_list)).perform(click());
        onView(withId(R.id.action_save_list)).check(matches(isDisplayed()));
        // Проверяем, что для всех позиций списка указана ед. измерения по умолчанию
        getTvUnitViewInteraction(mNewProductNamePattern + "1").check(matches(withText(R.string.default_unit)));
        getTvUnitViewInteraction(mNewProductNamePattern + "2").check(matches(withText(R.string.default_unit)));
        getTvUnitViewInteraction(mNewProductNamePattern + "3").check(matches(withText(R.string.default_unit)));
        // Переключаемся в режим В маназине, проверяем, что для всех позиций указана ед. измерения по умолчанию.
        onView(withId(R.id.action_go_to_in_shop_activity)).perform(click());
        getTvCountViewInteraction(mNewProductNamePattern + "1").check(matches(withText(containsString(mActivity.getString(R.string.default_unit)))));
        getTvCountViewInteraction(mNewProductNamePattern + "2").check(matches(withText(containsString(mActivity.getString(R.string.default_unit)))));
        getTvCountViewInteraction(mNewProductNamePattern + "3").check(matches(withText(containsString(mActivity.getString(R.string.default_unit)))));
        // Меняем ед. измерения для первой позиции
        onView(withId(R.id.action_edit_shopping_list)).perform(click());
        getTvUnitViewInteraction(mNewProductNamePattern + "1").perform(click());
        onView(withId(R.id.rvUnits)).perform(RecyclerViewActions
                .scrollTo(hasDescendant(withText(mNewUnitNamePattern + "1, " + mNewUnitShortNamePattern + "1"))));
        onView(recyclerViewItemWithText(mNewUnitNamePattern + "1, " + mNewUnitShortNamePattern + "1")).perform(click());
        getTvUnitViewInteraction(mNewProductNamePattern + "1").check(matches(withText(mNewUnitShortNamePattern + "1")));
        getTvUnitViewInteraction(mNewProductNamePattern + "2").check(matches(withText(R.string.default_unit)));
        getTvUnitViewInteraction(mNewProductNamePattern + "3").check(matches(withText(R.string.default_unit)));
        // Переходим в режим В магазине и проверяем, что ед. изменилась только у первой позиции.
        onView(withId(R.id.action_go_to_in_shop_activity)).perform(click());
        getTvCountViewInteraction(mNewProductNamePattern + "1").check(matches(withText(containsString(mNewUnitShortNamePattern + "1"))));
        getTvCountViewInteraction(mNewProductNamePattern + "2").check(matches(withText(containsString(mActivity.getString(R.string.default_unit)))));
        getTvCountViewInteraction(mNewProductNamePattern + "3").check(matches(withText(containsString(mActivity.getString(R.string.default_unit)))));
        // Возвращаемся в режим редактировпния и меняем у второй позиции.
        onView(withId(R.id.action_edit_shopping_list)).perform(click());
        getTvUnitViewInteraction(mNewProductNamePattern + "2").perform(click());
        onView(withId(R.id.rvUnits)).perform(RecyclerViewActions
                .scrollTo(hasDescendant(withText(mNewUnitNamePattern + "2, " + mNewUnitShortNamePattern + "2"))));
        onView(recyclerViewItemWithText(mNewUnitNamePattern + "2, " + mNewUnitShortNamePattern + "2")).perform(click());
